Fix editor vertical alignment issue.

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -43,6 +43,7 @@
 
 .submenu-header {
   display: flex;
+  align-items: center;
   padding: 10px;
 
   cursor: pointer;
